appId: ${APP_ID}
---
- launchApp
- assertVisible:
    text: "SafaiKart"

# Tap on a category
- tapOn: "Dry Cleaning"
- assertVisible:
    text: "Shirt"

# Go to service details
- tapOn: "Shirt"
- assertVisible:
    text: "Add to Cart"

# Increase quantity
- tapOn:
    id: "increase_quantity"
    optional: true

# Add to cart
- tapOn: "Add to Cart"
- assertVisible:
    text: "Cart"

# Open Cart
- tapOn: "View Cart"
- assertVisible:
    text: "Checkout"

# Verify subtotal is present
- assertVisible: "Subtotal"
